added css modules

--- a/src/components/FriendList/FriendListItem.module.css
+++ b/src/components/FriendList/FriendListItem.module.css
@@ -11,18 +11,18 @@
   height: 15px;
 }
 
-.friend-item {
+.friendItem {
   display: flex;
   box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
   padding: 20px;
   border-radius: 6px;
 }
-.friend-avatar {
+.friendAvatar {
   width: 100px;
   padding: 10px;
   padding-left: 40px;
 }
-.friend-name {
+.friendName {
   padding: 30px;
   font-size: 20px;
   font-weight: 500;
