--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -10,7 +10,7 @@
   margin-top: 30px;
   margin-bottom: 0;
 }
-.stat-list {
+.statsList {
   margin-top: 30px;
   display: flex;
   justify-content: center;
